--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
 </section-->
 
 <!-- Skills Section -->
-<section id="skills" class="bg-black">
+<section id="skills" class="bg-white">
 	<div class="row" style="padding-top: 4em; padding-bottom: 0em">
         	<div class="col-lg-12 text-center">
-                <h1 class="brand-heading" style="color:white; font-size:4em">My skills</h1>
+                <h1 class="brand-heading" style=" font-size:4em">My skills</h1>
             </div>
     </div>
     <div class="col-lg-8 col-lg-offset-2 text-center" style="padding-bottom: 4em">
-	    <div class="row" style="border-color:white">
-				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
+	    <div class="row" style="">
+				<div class="col-lg-3 col-lg-offset-0 text-center" style="">
 					<span class="fa-stack fa-4x">
 	                    <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading" >Planning & Strategy</h4>
 	                <p class="text" >User-Centered Design, User & Business requirement elicitation, Project Management</p>
 				</div>
-				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
+				<div class="col-lg-3 col-lg-offset-0 text-center" style="">
 					 <span class="fa-stack fa-4x">
 	                    <i class="fa fa-users fa-stack-1x fa"></i>
 	                </span>
@@ -190,14 +190,14 @@
 				</div>
 		<!--/div>
 		 <div class="row" style="border-color:white"-->
-				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
+				<div class="col-lg-3 col-lg-offset-0 text-center" style="">
 					<span class="fa-stack fa-4x">
 	                    <i class="fa fa-rocket fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading">Prototype & Testing</h4>
 	                <p class="text">Electronics, Programming, UI Prototyping, Tangible Prototyping, Interaction Design, Usability Testing</p>
 				</div>
-				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
+				<div class="col-lg-3 col-lg-offset-0 text-center" style="">
 					 <span class="fa-stack fa-4x">
 	                    <i class="fa fa-line-chart fa-stack-1x fa"></i>
 	                </span>
