--- a/eventix.html
+++ b/eventix.html
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <!--section class="section section-white">
+    <!section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
@@ -136,7 +136,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.<!--The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.--></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/persona.jpg" alt="Project Image"/></div>
@@ -185,38 +185,6 @@
       </div>
     </section-->
 
-    <!--footer>
-      <div class="container">
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 text-center os-animation">
-          <div class="section-head"> 
-            <h4>NEWSLETTER</h4>
-            <p>Subscribe to our newsletter to receive news, updates	and the latest projects we are working on.</p>
-          </div>
-        </div>
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 margin-top margin-bottom os-animation">
-          <form class="newsletter-form text-center">
-            <input placeholder="YOUR EMAIL ADDRESS..." class="form-control"/>
-            <button type="submit">I'M IN</button>
-            <div class="col-md-12 text-center margin-top"><small>You have our word, no spam. Ever.</small></div>
-          </form>
-        </div>
-        <div class="col-md-12 margin-top">
-          <hr/>
-        </div>
-        <div class="col-md-6 text-left small-screen-text-center">
-          <div class="footer-message">
-            <p>2015 © AVOIR - Crafted by Andrewch</p>
-          </div>
-        </div>
-        <div class="col-md-6 text-right small-screen-text-center">
-          <ul class="social-icons">
-            <li><a href="#">DRIBBBLE</a></li>
-            <li><a href="#">BEHANCE</a></li>
-            <li><a href="#">TWITTER</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer-->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
